--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 	color: white;
 }
 
+img {
+	-webkit-user-drag: none;
+	-khtml-user-drag: none;
+	-moz-user-drag: none;
+	-o-user-drag: none;
+}
+
 body {
 	margin: 0;
 	background: #040714;
